--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,5 @@
     @import 'partials/mixins';
     @import 'partials/variables';
-
     //small
     @media only screen and (max-width: 35rem) {
         h1::before {
@@ -13,41 +12,34 @@
             background-repeat: no-repeat;
             background-size: 100%;
         }
-
         h2::before {
             content: " ";
             padding: 50px;
         }
-
         body {
             display: flex;
             flex-direction: column;
             background-color: white;
             background-image: url('../zengardens/image/zen_background_small.jpg');
         }
-
         header {
             background-size: cover;
             padding: 1.8em;
             margin: 10px 0;
             border: 1px solid lightgrey;
         }
-
         section.intro {
             line-height: 1.2em;
         }
-
         .intro h2 {
             font-size: 1em;
         }
-
         .intro div,
         footer {
             border: 1px solid lightgrey;
             margin: 10px 0;
             padding: 10px;
         }
-
         .explanation,
         .participation,
         .benefits,
@@ -56,100 +48,200 @@
             margin: 10px 0;
             padding: 10px;
         }
-
         aside.sidebar {
             padding: 40px;
             background-color: $typo-color;
         }
-
         footer {
             text-align: center;
             background-color: #a1f3af;
             height: 20px;
         }
     }
-
+    
     // Medium
     @media only screen and (min-width: 35rem) {
+        body {
+            line-height: 1.4;
+            color: $text-color;
+            background-color: $body-color;
+            margin: 0;
+            text-align: center;
+            width: 90%;
+            padding: 15px;
+            border-radius: 15px;
+        }
         h1 {
-            font-size: 2.5rem;
+            font-size: 3.5rem;
+            font-family: $font-h2;
+            margin-bottom: 0;
+            font-weight: 700;
+            text-transform: to-lower-case($string: "");
         }
-
-        h1,
-        h2 {
-            text-transform: uppercase;
+        h1 {
+            text-transform: "";
         }
-
         h1::before {
             @include add-image(100px,
-                100px,
-                "image/favicon_1.png");
+            100px,
+            "image/favicon_1.png");
         }
-
         h2::before {
             content: " ";
             padding: 50px;
+            font-size: 35px;
+            font-family: $font-h2;
         }
-
+        h3 {
+            font-size: 18px;
+            font-family: $font-h3;
+            color: #06310a;
+        }
+        header {
+            font-size: larger;
+            text-align: center;
+            background-color: $header-color;
+            border-radius: 10px;
+        }
         div.page-wrapper {
             display: grid;
-            grid-template-columns: 1fr 5fr;
+            //grid-template-columns: 1fr 3fr;
             max-width: 100%;
             margin: 0 auto;
             padding: 0;
         }
-
         section.intro {
             grid-column: 2/3;
             grid-row: 1/2;
             padding: 40px;
+            margin-bottom: 35px;
             text-align: center;
             background: url(image/zen_background_small.jpg);
             background-size: cover;
+            //nested with section intro for the two divs
+            .summary {
+                text-align: center;
+                grid-row: 2;
+                grid-column: 1/ span 2;
+                border: 1px solid powderblue;
+                margin-bottom: 20px;
+                background-color: $summary-color;
+                border-radius: 10px;
+            }
+            .preamble {
+                background-color: $preamble-color;
+                text-align: center;
+                grid-row: 2;
+                padding: 10px;
+                border-radius: 10px;
+            }
         }
-
+        //this is the second div with 4 divs 
         div.main,
         zen-supporting {
-            padding: 60px;
             background: $background-color;
-
+            display: grid;
+            grid-row: 1fr 1fr 1fr 1fr;
+            gap: 20px 41px;
+            margin-bottom: 35px;
+            border-radius: 10px;
             footer,
             div.requirements p:last-child {
                 text-align: center;
             }
+            .explanation {
+                grid-row: 1;
+                background-color: $explanation-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .participation {
+                grid-row: 2;
+                background-color: $participation-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .benefits {
+                background-color: $benefits-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .requirements {
+                background-color: $require-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
         }
-
         aside.sidebar {
             padding: 40px;
             grid-column: 1/2;
             grid-row: 1/3;
         }
-
+        .contentinfo {
+            display: grid;
+            grid-template-rows: 1fr;
+            grid-column: 1fr;
+        }
         ul {
             list-style-type: none;
             display: inline;
             margin: 0;
             padding: 0;
         }
-
         .design-name {
             margin: 0;
             padding: 0;
             display: block;
         }
-
         .designer-name {
             margin-bottom: 200px;
         }
+        footer {
+            grid-column: 1/span 2;
+            grid-row: 5;
+            background-color: $footer-color;
+            text-align: center;
+            font-size: 30px;
+            height: 40px;
+            padding: 10px;
+            border-radius: 10px;
+            margin-bottom: 15px;
+            a {
+                color: #000;
+            }
+            a:hover {
+                color: $hover-color;
+            }
+        }
+        .wrapper {
+            text-align: center;
+            display: grid;
+            grid-area: auto;
+            grid-template-columns: 1fr;
+            grid-template-rows: 1fr;
+            border-radius: 10px;
+            font-size: 16px;
+            text-align: left;
+            padding: 15px;
+            background-color: $side-color;
+            ul {
+                list-style-type: none;
+            }
+            a {
+                color: #000;
+            }
+            a:hover {
+                color: $require-color;
+            }
+        }
     }
-
+    
     //Large
     @media only screen and(min-width:70rem) {
         html {
             margin: 0;
             padding: 0;
         }
-
         body {
             font: 75% georgia, sans-serif;
             line-height: 1.4;
@@ -162,7 +254,6 @@
             padding: 15px;
             border-radius: 15px;
         }
-
         h1 {
             font-size: $h1-size;
             font-family: $font-h2;
@@ -170,24 +261,20 @@
             font-weight: 700;
             text-transform: to-lower-case($string: "");
         }
-
         h2 {
             margin-top: 0;
             font-size: 35px;
             font-family: $font-h2;
         }
-
         h3 {
             font-size: 25px;
             font-family: $font-h3;
             color: #06310a;
         }
-
         p {
             font-size: 16px;
             text-align: center;
         }
-
         .page-wrapper {
             position: absolute;
             display: grid;
@@ -196,13 +283,11 @@
             height: 300px;
             grid-template-rows: repeat(3, 1fr);
         }
-
         .intro {
             position: unset;
             grid-column-end: 1/span 2;
             border-radius: 15px;
         }
-
         header {
             font-size: larger;
             text-align: center;
@@ -211,7 +296,6 @@
             grid-row: 1;
             border-radius: 10px;
         }
-
         .summary {
             text-align: center;
             grid-row: 2;
@@ -221,7 +305,6 @@
             background-color: $summary-color;
             border-radius: 10px;
         }
-
         .preamble {
             background-color: $preamble-color;
             text-align: center;
@@ -229,7 +312,6 @@
             padding: 10px;
             border-radius: 10px;
         }
-
         .main,
         zen-supporting {
             display: grid;
@@ -238,13 +320,11 @@
             gap: 20px 41px;
             border-radius: 10px;
         }
-
         .explanation {
             background-color: $explanation-color;
             padding: 10px;
             border-radius: 10px;
         }
-
         .participation {
             grid-column: 1;
             grid-row: 2;
@@ -254,7 +334,6 @@
             padding: 10px;
             border-radius: 10px;
         }
-
         .benefits {
             grid-column: 2;
             grid-row: 1;
@@ -262,7 +341,6 @@
             padding: 10px;
             border-radius: 10px;
         }
-
         .requirements {
             grid-row: 2;
             grid-column: 2;
@@ -270,13 +348,11 @@
             padding: 10px;
             border-radius: 10px;
         }
-
         .contentinfo {
             display: grid;
             grid-template-rows: 1fr;
             grid-column: 1fr;
         }
-
         footer {
             grid-column: 1/span 2;
             grid-row: 5;
@@ -287,16 +363,13 @@
             padding: 10px;
             border-radius: 10px;
             margin-bottom: 15px;
-
             a {
                 color: #000;
             }
-
             a:hover {
                 color: $hover-color;
             }
         }
-
         /* I put this comment out - because it wraps to the side, and not bottom */
         .wrapper {
             text-align: center;
@@ -309,24 +382,19 @@
             text-align: left;
             padding: 15px;
             background-color: $side-color;
-
             ul {
                 list-style-type: none;
             }
-
             a {
                 color: #000;
             }
-
             a:hover {
                 color: $require-color;
             }
         }
-
         .aside.sidebar {
             background-color: #c3fac8;
         }
-
         /* Shape Flower & Transitions */
         .summary p abbr:before {
             position: absolute;
@@ -338,11 +406,10 @@
             background: $explanation-color;
             border-radius: 50px;
             animation-name: l-circle;
-            animation-duration: 3s;  
+            animation-duration: 3s;
             animation-delay: 2s;
             animation-fill-mode: backwards;
         }
-
         .summary p abbr:after {
             position: absolute;
             content: "";
@@ -353,11 +420,10 @@
             background: $explanation-color;
             border-radius: 50px;
             animation-name: l-circle;
-            animation-duration: 3s;  
+            animation-duration: 3s;
             animation-delay: 2s;
             animation-fill-mode: backwards;
         }
-
         .summary p:before {
             position: absolute;
             content: "";
@@ -368,11 +434,10 @@
             background: $explanation-color;
             border-radius: 50px;
             animation-name: r-circle;
-            animation-duration: 3s;  
+            animation-duration: 3s;
             animation-delay: 2s;
             animation-fill-mode: backwards;
         }
-
         .summary:before {
             position: absolute;
             content: "";
@@ -383,11 +448,10 @@
             background: $explanation-color;
             border-radius: 50px;
             animation-name: r-circle;
-            animation-duration: 3s;  
+            animation-duration: 3s;
             animation-delay: 2s;
             animation-fill-mode: backwards;
         }
-
         .summary:after {
             position: absolute;
             content: "";
@@ -398,49 +462,52 @@
             background: yellow;
             border-radius: 50px;
             animation-name: c-circle;
-            animation-duration: 3s;  
+            animation-duration: 3s;
             animation-delay: 2s;
             animation-fill-mode: backwards;
         }
-
         @keyframes c-circle {
-            from {left: 72px; background-color: $preamble-color;}
-            to {left: 172px;}
+            from {
+                left: 72px;
+                background-color: $preamble-color;
+            }
+            to {
+                left: 172px;
+            }
         }
-
         @keyframes r-circle {
-            from {left: 90px;}
-            to {left: 190px;}
+            from {
+                left: 90px;
+            }
+            to {
+                left: 190px;
+            }
         }
-
         @keyframes l-circle {
-            from {left: 50px;}
-            to {left: 150px;}
+            from {
+                left: 50px;
+            }
+            to {
+                left: 150px;
+            }
         }
-
         /* Display Icons */
-
         .zen-github::before {
             background: url("image/github.png");
         }
-
         .zen-accessibility::before {
             background: url("image/accessibility.png");
         }
-
         .zen-license::before {
             background: url("image/license.png");
         }
-
         .zen-validate-css::before {
             background: url("image/css.png");
         }
-
         .zen-validate-html::before {
             background: url("image/html.png");
         }
-
-        .zen-github::before, 
+        .zen-github::before,
         .zen-accessibility::before,
         .zen-license::before,
         .zen-validate-css::before,
@@ -456,5 +523,4 @@
             content: " ";
             padding: 12px;
         }
-
     }
