--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ footer {
     grid-row: 1/2;
     padding: 40px;
     margin-bottom: 35px;
+    border-radius: 10px;
     text-align: center;
     background: url(image/zen_background_small.jpg);
     background-size: cover;
