--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ footer {
   }
 
   h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     font-family: "El Messiri", sans-serif;
     margin-bottom: 0;
     font-weight: 700;
@@ -96,10 +96,9 @@ footer {
     background-size: 100%;
   }
 
-  h2::before {
-    content: " ";
-    padding: 50px;
-    font-size: 35px;
+  h2 {
+    margin-top: 0;
+    font-size: 25px;
     font-family: "El Messiri", sans-serif;
   }
 
