--- a/style.scss
+++ b/style.scss
@@ -71,7 +71,7 @@
             border-radius: 15px;
         }
         h1 {
-            font-size: 3.5rem;
+            font-size: 2.5rem;
             font-family: $font-h2;
             margin-bottom: 0;
             font-weight: 700;
@@ -81,10 +81,9 @@
             100px,
             "image/favicon_1.png");
         }
-        h2::before {
-            content: " ";
-            padding: 50px;
-            font-size: 35px;
+        h2 {
+            margin-top: 0;
+            font-size: 25px;
             font-family: $font-h2;
         }
         h3 {
