--- a/partials/_med_screen.scss
+++ b/partials/_med_screen.scss
@@ -1,65 +1,171 @@
-// Medium
-@media only screen and (min-width: 35rem) {
-    h1 {
-        font-size: 2.5rem;
-    }
-    h1,
-    h2 {
-        text-transform: uppercase;
-    }
-    h1::before {
-        @include add-image(100px, 100px, "image/favicon_1.png");
-    }
-    h2::before {
-        content: " ";
-        padding: 50px;
-    }
-    div.page-wrapper {
-        display: grid;
-        grid-template-columns: 1fr 5fr;
-        max-width: 100%;
-        margin: 0 auto;
-        padding: 0;
-    }
-    section.intro {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        padding: 40px;
-        text-align: center;
-        background: url(image/zen_background_small.jpg);
-        background-size: cover;
-    }
-
-    header {
-        background-color: rgb(62, 128, 82);
-    }
-    div.main,
-    zen-supporting {
-        padding: 60px;
-        background: $background-color;
-        footer,
-        div.requirements p:last-child {
-            text-align: center;
-        }
-    }
-    aside.sidebar {
-        padding: 40px;
-        grid-column: 1/2;
-        grid-row: 1/3;
-        background-color: $typo-color;
-    }
-    ul {
-        list-style-type: none;
-        display: inline;
-        margin: 0;
-        padding: 0;
-    }
-    .design-name {
-        margin: 0;
-        padding: 0;
-        display: block;
-    }
-    .designer-name {
-        margin-bottom: 200px;
-    }
-}
+  // Medium
+  @media only screen and (min-width: 35rem) {
+      body {
+          line-height: 1.4;
+          color: $text-color;
+          background-color: $body-color;
+          margin: 0;
+          text-align: center;
+          padding: 15px;
+          border-radius: 15px;
+      }
+      h1 {
+          font-size: 2.5rem;
+          font-family: $font-h2;
+          margin-bottom: 0;
+          font-weight: 700;
+      }
+      h1::before {
+          @include add-image(100px, 100px, "image/favicon_1.png");
+      }
+      h2 {
+          margin-top: 0;
+          font-size: 25px;
+          font-family: $font-h2;
+      }
+      h3 {
+          font-size: 18px;
+          font-family: $font-h3;
+          color: #06310a;
+      }
+      header {
+          font-size: larger;
+          text-align: center;
+          background-color: $header-color;
+          border-radius: 10px;
+      }
+      div.page-wrapper {
+          display: grid;
+          //grid-template-columns: 1fr 3fr;
+          max-width: 100%;
+          margin: 0 auto;
+          padding: 0;
+      }
+      section.intro {
+          grid-column: 2/3;
+          grid-row: 1/2;
+          padding: 40px;
+          margin-bottom: 35px;
+          border-radius: 10px;
+          text-align: center;
+          background: url(image/zen_background_small.jpg);
+          background-size: cover;
+          //nested with section intro for the two divs
+          .summary {
+              text-align: center;
+              grid-row: 2;
+              grid-column: 1/ span 2;
+              border: 1px solid powderblue;
+              margin-bottom: 20px;
+              background-color: $summary-color;
+              border-radius: 10px;
+          }
+          .preamble {
+              background-color: $preamble-color;
+              text-align: center;
+              grid-row: 2;
+              padding: 10px;
+              border-radius: 10px;
+          }
+      }
+      //this is the second div with 4 divs 
+      div.main,
+      zen-supporting {
+          background: $background-color;
+          display: grid;
+          grid-template-columns: 1fr;
+          padding: 15px;
+          margin-bottom: 35px;
+          border-radius: 10px;
+          .explanation {
+              grid-row: 1;
+              background-color: $explanation-color;
+              padding: 10px;
+              margin-bottom: 35px;
+              border-radius: 10px;
+          }
+          .participation {
+              grid-row: 2;
+              margin-bottom: 35px;
+              background-color: $participation-color;
+              padding: 10px;
+              border-radius: 10px;
+          }
+          .benefits {
+              grid-row: 3;
+              margin-bottom: 35px;
+              background-color: $benefits-color;
+              padding: 10px;
+              border-radius: 10px;
+          }
+          .requirements {
+              grid-row: 4;
+              margin-bottom: 35px;
+              background-color: $require-color;
+              padding: 10px;
+              border-radius: 10px;
+          }
+      }
+      aside.sidebar {
+          padding: 40px;
+          grid-column: 1/2;
+          grid-row: 1/3;
+      }
+      .contentinfo {
+          display: grid;
+          grid-template-rows: 1fr;
+          grid-column: 1fr;
+      }
+      ul {
+          list-style-type: none;
+          display: inline;
+          margin: 0;
+          padding: 0;
+      }
+      .design-name {
+          margin: 0;
+          padding: 0;
+          display: block;
+      }
+      .designer-name {
+          margin-bottom: 200px;
+      }
+      footer {
+          grid-column: 1/span 2;
+          grid-row: 5;
+          background-color: $footer-color;
+          text-align: center;
+          font-size: 30px;
+          height: 40px;
+          padding: 10px;
+          border-radius: 10px;
+          margin-bottom: 15px;
+          a {
+              color: #000;
+          }
+          a:hover {
+              color: $hover-color;
+          }
+      }
+      .wrapper {
+          text-align: center;
+          display: grid;
+          grid-area: auto;
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr;
+          border-radius: 10px;
+          font-size: 16px;
+          text-align: left;
+          padding: 15px;
+          background-color: $side-color;
+          ul {
+              list-style-type: none;
+          }
+          a {
+              color: #000;
+          }
+          a:hover {
+              color: $require-color;
+          }
+      }
+  }
