--- a/style.scss
+++ b/style.scss
@@ -99,7 +99,7 @@
         }
         div.page-wrapper {
             display: grid;
-            //grid-template-columns: 1fr 3fr;
+            grid-template-columns: 1fr 3fr;
             max-width: 100%;
             margin: 0 auto;
             padding: 0;
@@ -135,8 +135,8 @@
         div.main,
         zen-supporting {
             background: $background-color;
-            display: grid;
-            grid-template-columns: 1fr;
+            // display: grid;
+            // grid-template-columns: 1fr;
             padding: 15px;
             margin-bottom: 35px;
             border-radius: 10px;
@@ -155,14 +155,14 @@
                 border-radius: 10px;
             }
             .benefits {
-                grid-row: 3;
+                //  grid-row: 3;
                 margin-bottom: 35px;
                 background-color: $benefits-color;
                 padding: 10px;
                 border-radius: 10px;
             }
             .requirements {
-                grid-row: 4;
+                //   grid-row: 4;
                 margin-bottom: 35px;
                 background-color: $require-color;
                 padding: 10px;
@@ -234,20 +234,18 @@
     }
     
     //Large
-    @media only screen and(min-width:70rem) {
+    @media only screen and(min-width:55rem) {
         html {
             margin: 0;
             padding: 0;
         }
         body {
-            font: 75% georgia, sans-serif;
             line-height: 1.4;
             color: $text-color;
             background-size: 2500px 900px;
             background-color: $body-color;
             margin: 0;
             text-align: center;
-            width: 70%;
             padding: 15px;
             border-radius: 15px;
         }
@@ -312,38 +310,40 @@
         .main,
         zen-supporting {
             display: grid;
-            grid-template-rows: repeat(2, 1fr);
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
             gap: 20px 41px;
             border-radius: 10px;
-        }
-        .explanation {
-            background-color: $explanation-color;
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .participation {
-            grid-column: 1;
-            grid-row: 2;
-            position: relative;
-            grid-template-rows: subgrid;
-            background-color: $participation-color;
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .benefits {
-            grid-column: 2;
-            grid-row: 1;
-            background-color: $benefits-color;
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .requirements {
-            grid-row: 2;
-            grid-column: 2;
-            background-color: $require-color;
-            padding: 10px;
-            border-radius: 10px;
+            .explanation {
+                grid-column: 1;
+                grid-row: 1;
+                background-color: $explanation-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .participation {
+                grid-column: 1;
+                grid-row: 2;
+                position: relative;
+                grid-template-rows: subgrid;
+                background-color: $participation-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .benefits {
+                grid-column: 2;
+                grid-row: 1;
+                background-color: $benefits-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
+            .requirements {
+                grid-row: 2;
+                grid-column: 2;
+                background-color: $require-color;
+                padding: 10px;
+                border-radius: 10px;
+            }
         }
         .contentinfo {
             display: grid;
