--- a/style.scss
+++ b/style.scss
@@ -273,8 +273,8 @@
         .page-wrapper {
             position: absolute;
             display: grid;
+            width: 90%;
             grid-template-columns: repeat(1, 1fr);
-            gap: 20px 41px;
             height: 300px;
             grid-template-rows: repeat(3, 1fr);
         }
@@ -377,6 +377,7 @@
             border-radius: 10px;
             font-size: 16px;
             text-align: left;
+            width: 200px;
             padding: 15px;
             background-color: $side-color;
             ul {
@@ -391,6 +392,7 @@
         }
         .aside.sidebar {
             background-color: #c3fac8;
+            padding: 35px;
         }
         /* Shape Flower & Transitions */
         .summary p abbr:before {
