committed change logo

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Sawarabi+Mincho&display=swap');
 // Variables
-$header-color: #3e8052;
+$header-color: #a1ddb3;
 $typo-color: #e6e6e6;
 $background-color: #ffffff;
 $text-color: hsl(0,
