--- a/style.css
+++ b/style.css
@@ -89,9 +89,9 @@ footer {
     display: inline-block;
     position: relative;
     content: "";
-    width: 100px;
-    height: 100px;
-    background: url("image/favicon_1.png");
+    width: 150px;
+    height: 150px;
+    background: url("image/plants logo.png");
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -111,7 +111,7 @@ footer {
   header {
     font-size: larger;
     text-align: center;
-    background-color: #3e8052;
+    background-color: #a1ddb3;
     border-radius: 10px;
   }
 
@@ -152,10 +152,11 @@ footer {
 
   div.main,
 zen-supporting {
-    background: #ffffff;
     padding: 15px;
     margin-bottom: 35px;
     border-radius: 10px;
+    background: url(image/zen_background_small.jpg) repeat;
+    background-size: auto 850px;
   }
   div.main .explanation,
 zen-supporting .explanation {
@@ -317,7 +318,7 @@ zen-supporting .requirements {
   header {
     font-size: larger;
     text-align: center;
-    background-color: #3e8052;
+    background-color: #a1ddb3;
     grid-column: 2;
     grid-row: 1;
     border-radius: 10px;
