change heading color

--- a/partials/_variables.scss
+++ b/partials/_variables.scss
@@ -2,18 +2,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=El+Messiri&family=Sawarabi+Mincho&display=swap');
 // Variables
-$header-color: #a1ddb3;
+$header-color: #9adaad;
 $typo-color: #e6e6e6;
-$background-color: #ffffff;
+$background-color: #bde6cf;
 $text-color: hsl(0,
 0%,
 2%);
-$hover-color:red;
+$hover-color:rgb(182,
+23,
+23);
 $h1-size: 80px;
 $font-family-h1: 'Fondamento',
 cursive;
 //section colors
-$body-color:#9bcfa0;
+$body-color:#b0ecb6;
 $side-color:#66ad72;
 $summary-color:#c3fac8;
 $preamble-color:rgb(186,
