--- a/style.scss
+++ b/style.scss
@@ -95,7 +95,7 @@
             font-size: larger;
             text-align: center;
             background-color: $header-color;
-            border-radius: 10px;
+            border-radius: 15px 50px 30px;
         }
         div.page-wrapper {
             display: grid;
@@ -203,7 +203,7 @@
             font-size: 30px;
             height: 40px;
             padding: 10px;
-            border-radius: 10px;
+            border-radius: 15px 50px 30px;
             margin-bottom: 15px;
             a {
                 color: #000;
@@ -218,7 +218,8 @@
             grid-area: auto;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
-            border-radius: 10px;
+            // border-radius: 10px;
+            border-radius: 15px 50px 30px;
             font-size: 16px;
             text-align: left;
             padding: 15px;
@@ -291,7 +292,8 @@
             background-color: $header-color;
             grid-column: 2;
             grid-row: 1;
-            border-radius: 10px;
+            //border-radius: 10px;
+            border-radius: 15px 50px 30px;
         }
         .summary {
             text-align: center;
@@ -360,7 +362,7 @@
             font-size: 30px;
             height: 40px;
             padding: 10px;
-            border-radius: 10px;
+            border-radius: 15px 50px 30px;
             margin-bottom: 15px;
             a {
                 color: #000;
@@ -376,7 +378,8 @@
             grid-area: auto;
             grid-template-columns: 1fr;
             grid-template-rows: 1fr;
-            border-radius: 10px;
+            // border-radius: 10px;
+            border-radius: 15px 50px 30px;
             font-size: 16px;
             text-align: left;
             width: 200px;
