--- a/style.css
+++ b/style.css
@@ -2,13 +2,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=El+Messiri&family=Sawarabi+Mincho&display=swap");
 @media only screen and (max-width: 35rem) {
+  
+  h1 {
+    font-size: 1.7rem;
+    font-family: "El Messiri", sans-serif;
+    font-weight: 800;
+  }
+
   h1::before {
     display: inline-block;
     position: relative;
     content: "";
-    font-family: "El Messiri", sans-serif;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background: url("image/plants logo.png");
     background-repeat: no-repeat;
     background-size: 100%;
@@ -16,7 +22,7 @@
 
   h2::before {
     content: " ";
-    padding: 50px;
+    padding: 40px 20px 10px 60px;
   }
 
   body {
@@ -24,16 +30,99 @@
     flex-direction: column;
     background-color: white;
     background-image: url("../zengardens/image/zen_background_small.jpg");
+
   }
 
   header {
     background-size: cover;
-    padding: 1.8em;
-    margin: 10px 0;
+    padding: 1.5em;
+    margin: 8px 0;
     border: 1px solid lightgrey;
     background-color: #9adaad;
     border-radius: 15px 50px 30px;
   }
+
+
+
+
+
+
+
+
+  section.intro .summary {
+    text-align: center;
+    grid-row: 2;
+    grid-column: 1/span 2;
+    border: 1px solid powderblue;
+    margin-bottom: 20px;
+    
+    border-radius: 10px;
+  }
+  section.intro .preamble {
+    background-color: #bae7e7;
+    text-align: center;
+    grid-row: 2;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  div.main,
+zen-supporting {
+    padding: 15px;
+    margin-bottom: 35px;
+    border-radius: 10px;
+    background: url(image/zen_background_small.jpg) repeat;
+    background-size: auto 850px;
+  }
+  div.main .explanation,
+zen-supporting .explanation {
+    grid-row: 1;
+    background-color: #eca7a7;
+    padding: 10px;
+    margin-bottom: 35px;
+    border-radius: 10px;
+  }
+  div.main .participation,
+zen-supporting .participation {
+    grid-row: 2;
+    margin-bottom: 35px;
+    background-color: #f0dbc0;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  div.main .benefits,
+zen-supporting .benefits {
+    margin-bottom: 35px;
+    background-color: #63f0f0;
+    padding: 10px;
+    border-radius: 10px;
+  }
+  div.main .requirements,
+zen-supporting .requirements {
+    margin-bottom: 35px;
+    background-color: #85cbeb;
+    padding: 10px;
+    border-radius: 10px;
+  }
+
+  aside.sidebar {
+    padding: 40px;
+    grid-column: 1/2;
+    grid-row: 1/3;
+  }
+
+
+
+
+
+.wrapper {
+  background-color: #66ad72;
+  border-radius: 15px 50px 30px;
+  font-size: 16px;
+  text-align: left;
+}
+
+
 
   section.intro {
     line-height: 1.2em;
@@ -45,6 +134,7 @@
 
   .intro div,
 footer {
+    background-color: #c3fac8;
     border: 1px solid lightgrey;
     margin: 10px 0;
     padding: 10px;
@@ -100,8 +190,8 @@ footer {
     height: 5px;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin-left: 15px;
-    margin-right: 10px;
+    margin-left: 10px;
+    margin-right: 8px;
     content: " ";
     padding: 12px;
   }
